@@ -1,5 +1,11 @@
 [b]Version 0.6.9[/b]:
 
+(2009-11-06)
+ * Pass the text for the slave command osd_show_text in utf8. Should fix
+   bug #2854097 (incorrect charset in OSD texts). 
+   Fix based on a patch by c0rnholio 
+   (https://sourceforge.net/tracker/?func=detail&atid=913575&aid=2893306&group_id=185512)
+
 (2009-10-26)
  * Added a new option for smplayer.ini: fast_load_sub
    If true (the default) loading an external subtitle will be fast
